contrast bug fix and filters

--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -210,6 +210,7 @@
 
  .filter-section {
      margin-bottom: 20px;
+     padding: 1rem;
  }
 
 
@@ -240,15 +241,14 @@
  }
 
  .filter-item:hover {
-     border-color: var(--cyan);
-     background: rgb(11 187 182 / 8%);
-     color: var(--cyan);
+     border-color: var(--gold);
+     color: var(--gold);
  }
 
  .hidden-input:checked+.filter-item {
      border-color: var(--gold);
      background: var(--gold);
-     color: #fff
+     color: #000;
  }
 
  .filter-content {
@@ -256,13 +256,14 @@
  }
 
  .filter-heading {
-    text-transform: uppercase;
-    font-size: 12px;
+     text-transform: uppercase;
+     font-size: 12px;
  }
 
  .filter-description {
      font-size: 0.75rem;
  }
+
  .product-grid {
      display: grid;
      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
